sửa hiển thị doanh thu và bảng thêm renter bên admin dashboard

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -2545,7 +2545,7 @@ nav[aria-label="Page navigation"] {
                         <table class="table table-hover">                            <thead>                                <tr>
                                     <th>Tên</th>
                                     <th>Số phòng</th>
-                                    <th>Doanh thu tháng</th>
+                                    <th>Doanh thu</th>
                                     <th>Phí dịch vụ đã trả</th>
                                     <th>Đánh giá</th>
                                 </tr>
